fixed logo on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -65,7 +65,7 @@ header .logo {
     align-self: center;
     display: flex;
     align-items: flex-end;
-    gap: 2rem;
+    gap: 0rem;
 }
 header .nav {
     flex: 1;
